--- a/creator/templates/creator/base.html
+++ b/creator/templates/creator/base.html
@@ -4,5 +4,11 @@
 
 {% block body %}
     <h1>Тесты</h1>
-    <button>Добавить тест</button>
+    <button class="btn btn-danger">Добавить тест</button>
+
+    {% for quiz in quizzes %}
+        <button class="btn btn-info">
+            <h2>{{ quiz.name }}</h2>
+        </button>
+    {% endfor %}
 {% endblock %}
