--- a/creator/static/creator/css/main.css
+++ b/creator/static/creator/css/main.css
@@ -8,9 +8,24 @@ body h1 {
     margin-top: 30px;
 }
 
-body button {
+body .btn-danger {
     margin-left: 85%;
     margin-top: 10px;
     font-size: 20px;
     background: #9edaff;
+}
+
+.btn-info {
+    background: #9edaff;
+    clear: both;
+    float: center;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 30px;
+    text-align: left;
+}
+
+.btn-info h2 {
+    margin-left: 15px;
+    font-size: 40px;
 }
