--- a/teacher/templates/teacher/studentC.html
+++ b/teacher/templates/teacher/studentC.html
@@ -1,15 +1,17 @@
-<!doctype html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}Преподователи{% endblock %}</title>
-</head>
-<body>
-<p>
+{% extends 'teacher/layout.html' %}
 
-</p>
-</body>
-</html>
+{% block title %}{{ title }}{% endblock %}
+
+{% block body %}
+<h2>Студенты</h2>
+
+<a href="{% url 'add-student' %}"><button class="add_button_student">добавить студента </button></a>
+
+    <div>
+        {% for el in student %}
+        <div class="list list-warning">
+            <button>{{ el.name }} {{ el.last_name }}</button>
+        </div>
+        {% endfor %}
+    </div>
+{% endblock %}
