--- a/teacher/templates/teacher/testC.html
+++ b/teacher/templates/teacher/testC.html
@@ -1,13 +1,12 @@
-<!doctype html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}Преподователи{% endblock %}</title>
-</head>
-<body>
-    "Helloworld"
-</body>
-</html>
+{% extends 'teacher/layout.html' %}
+
+{% block title %}{{ title }}{% endblock %}
+
+{% block body %}
+<h2>Тесты</h2>
+        {% for el in tests %}
+        <div class="testiki testiki-warning">
+            <button>{{ el.name }}</button>
+        </div>
+        {% endfor %}
+{% endblock %}
