--- a/student/static/student/css/main.css
+++ b/student/static/student/css/main.css
@@ -11,10 +11,19 @@ body h1 {
 body ul {list-style: none}
 
 body li {
-    margin-top: 10px;
-    margin-left: 7%;
+    font-size: 30px;
 }
 
 body button {
     front-size: 20px;
+}
+
+.btn-info {
+    background: #9edaff;
+    clear: both;
+    float: center;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 30px;
+    text-align: left;
 }
