can back to tests at any page creator

--- a/creator/templates/creator/add-answer.html
+++ b/creator/templates/creator/add-answer.html
@@ -10,7 +10,7 @@
     <button>создать ответ</button>
     <span>{{ error }}</span>
 </form>
-<button class="btn btn-info">
+<button class="btn btn-light">
     <a href="{% url 'test-lib' %}"><h2>Вернуться к тестам</h2></a>
 </button>
 {% endblock %}
