--- a/creator/templates/creator/display-question.html
+++ b/creator/templates/creator/display-question.html
@@ -11,4 +11,7 @@
         {% endif %}
         {% endfor %}
     </ul>
+    <button class="btn btn-light">
+        <a href="{% url 'test-lib' %}"><h2>Вернуться к тестам</h2></a>
+    </button>
 {% endblock %}
