--- a/creator/templates/creator/display-test.html
+++ b/creator/templates/creator/display-test.html
@@ -16,4 +16,7 @@
         {% endfor %}
         </div>
     </div>
+    <button class="btn btn-light">
+        <a href="{% url 'test-lib' %}"><h2>Вернуться к тестам</h2></a>
+    </button>
 {% endblock %}
