--- a/creator/static/creator/css/main.css
+++ b/creator/static/creator/css/main.css
@@ -8,7 +8,7 @@ body h1 {
     margin-top: 30px;
 }
 
-body .btn-danger {
+.btn-danger {
     margin-left: 85%;
     margin-top: 10px;
     font-size: 20px;
