--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,4 +1,4 @@
-{% extends 'student/dependencies.html' %}
+{% extends 'users/dependencies.html' %}
 {% load static%}
 {% block content %}
 <div class="container jumbotron">
