--- a/creator/templates/creator/base.html
+++ b/creator/templates/creator/base.html
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>Тесты</h1>
-    <a href="{% url 'add-test' %}"><button class="btn btn-danger">Добавить тест</button></a>
+    <a href="{% url 'add-test' %}"><button class="btn btn-danger">Добавить тест</button></a><br>
 
     {% for quiz in quizzes %}
         <button class="btn btn-info">
